package baseNoStates;

public class UnlockShortly extends Status {
  public UnlockShortly(Door door) {
    super(door);
  }

  @Override
  public void locked() {

  }

  @Override
  public void unlock() {

  }
}
