package basenostates;

public final class States {
  public static final String UNLOCKED = "unlocked";
  public static final String LOCKED = "locked";
  public static final String UNLOCKED_SHORTLY = "unlocked_shortly";
  public static final String PROPPED = "propped";


}
